--- a/static_crawl.ipynb
+++ b/static_crawl.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "respone = requests.get(\n",
-    "    \"https://news.naver.com/main/list.naver?mode=LPOD&mid=sec&oid=020&date=20221206\",\n",
+    "    \"https://news.naver.com/main/list.naver?mode=LPOD&mid=sec&oid=020&date=20230110\",\n",
     "    headers={\n",
     "        'User-Agent': 'Mozilla 5.0'\n",
     "    }\n",
@@ -2880,7 +2880,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2894,12 +2894,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "08640de8a464725970818245803dc6e08cdc1f568be50f031aa1210eda61f8c9"
+    "hash": "47a3afafe20b6d92509ea40da1913ea3f86b90737ddc4909a2c76ba40695ba65"
    }
   }
  },
