--- a/naver_news_crawl.ipynb
+++ b/naver_news_crawl.ipynb
@@ -23,7 +23,7 @@
     "import pandas as pd\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n"
    ]
   },
   {
